--- a/web/index.html
+++ b/web/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snazzy</title>
+    <title>App of Wonders</title>
 </head>
 <body>
-   <p>The snazziest web app.</p> 
+   <p>So wow</p> 
 </body>
 </html>
