change website text to see if app updates

--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-   <p>Bananas</p> 
+   <p>Kiwis are fuzzy.</p> 
    <div class="box orange centered mt-50"></div>
 </body>
 </html>
